2007-08-29  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/website-maintenance.htm4, website/website-maintenance-de.htm4:
	Fixed SVN URL.

2007-08-28  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/openpgp-icon.eps.gz, manual/smime-icon.eps.gz: New.

	* manual/Makefile.am: Added handling for openpgp-icon.eps.gz and
	smime-icon.eps.gz.

2007-08-28  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/einsteiger.tex, manual/durchblicker.tex: Unified terms
	"Passwortsatz", "Passwort" to "Passphrase".

2007-08-28  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/einsteiger.tex: A new chapter on explaining
	the two worlds, S/MIME and OpenPGP. By Geo Kocheril.

2007-08-28  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/einsteiger.tex: Some little improvements and typo fixes,
	by Geo Kocheril.

2007-08-28  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-de.htm4: Added MacOS X etc. into list
	of possible build systems just to make clear it is a generalized
	approach when using a VM.

2007-08-24  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/localize-gpg4win.htm4: Added URL to GpgOL po directory.

2007-08-23  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/template_link_boxes_de.m4, website/template_link_boxes_en.m4:
	Added localization page to sitemap.

	* website/template_header.htm4: Moved date into download box
	and renamed link to change history from date to change history.

2007-08-23  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	Prepare english translation of changes in the build descriptions.

	* website/build-installer-gnulinux.htm4: New.

	* website/build-installer.htm4: Extracted the description for GNU/Linux.
	Added hint on Windows.

	* website/build-installer-on-vm.htm4: New.

	* website/build-installer-on-w32-debian-screenshots.htm4: New.

	* website/build-installer-on-w32-debian-screenshots-de.htm4,